# wkwebview-ipc

./: CMakeLists.txt  README.md
include/wkwebview-ipc/: IPC.h  ipc_cpp.h
js/: package.json  tsconfig.json
js/src/: ipc.ts
src/: IPC.m  IPCSchemeHandler.h  IPCSchemeHandler.m
